# gtktwitter

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.m32  Makefile.w32  README  config.h.in  configure  configure.in  gtktwitter.c  gtktwitter.rc  gtktwitter.spec  gtktwitter.spec.in  index.html  resource.h
m4/: gtk.am
po/: Makefile  Makefile.w32  gtktwitter.pot  ja.po
